# n8n-mw

./: .env.example  README.md  n8n_http_server.py  n8n_mcp_server.py  n8n_server.py  pyproject.toml  requirements.txt  test_server.py
.claude/: settings.local.json
